# Realtime_GPS_Logger

./: Dockerfile  Dockerfile-db  LICENSE  Makefile  README.md  docker-compose.yml  geo_utils.py  mqtt_python.py  pyproject.toml  requirements.txt
connector/: mqtt_python.py  requirements.txt  utils.py
img/diagram/: diagram.py
mosquitto/config/: mosquitto.conf
mysql/: README.md
mysql/config/: setup.sql
