[tool.poetry]
name = "realtime_gps_logger"
version = "0.1.0"
description = ""
authors = ["Selim Onat"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "1.5"
mysqlclient = "1.4.6"
haversine = "^2.5.1"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
