[tool.poetry]
name = "realtime_gps_logger"
version = "0.1.0"
description = ""
authors = ["Selim Onat"]

[tool.poetry.dependencies]
python = "^3.7"
diagrams = "^0.21.1"
docker-compose = "1.29.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
